--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
   height: 300px;
   width: 300px;
   display: grid;
-  grid-template-rows: repeat(5, 50px);
-  grid-template-columns: repeat(4, 50px);
+  grid-template-rows: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .item-AC {
