Add font imports and update styles for calculator display and buttons

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
+@import "https://fonts.googleapis.com/css?family=Share+Tech+Mono";
+@font-face {
+  font-family: "Digital";
+  src: url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.eot");
+  src: url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.eot?#iefix")
+      format("embedded-opentype"),
+    url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.woff2")
+      format("woff2"),
+    url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.woff")
+      format("woff"),
+    url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.ttf")
+      format("truetype"),
+    url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.svg#Digital-7")
+      format("svg");
+}
+
 .keypad {
   height: 300px;
   width: 300px;
@@ -8,6 +24,7 @@
 
 .item-AC {
   grid-column: span 2;
+  background-color: rgb(172, 57, 57);
 }
 
 .item-0 {
@@ -16,4 +33,68 @@
 
 .item-equal {
   grid-row: span 2;
+  background-color: rgb(0, 68, 102);
+}
+
+.item-multiply,
+.item-divide,
+.item-add,
+.item-subtract {
+  background-color: rgb(102, 102, 102);
+}
+
+.display {
+  /* display: flex;
+  flex-direction: column; */
+  background-color: black;
+  color: white;
+}
+
+.formula,
+.typed {
+  width: 300px;
+  height: auto;
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  line-height: 35px;
+  font-size: 20px;
+  font-family: digital;
+  text-align: right;
+}
+
+.formula {
+  min-height: 20px;
+  font-family: digital;
+  font-size: 11px;
+  color: orange;
+  line-height: 20px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
+
+.formula h1 {
+  overflow: auto;
+  text-overflow: clip;
+}
+
+.calculator {
+  border: 4px solid black;
+  border-radius: 5px;
+  background-color: black;
+}
+
+button {
+  border: 0.5px solid black;
+  background-color: rgb(77, 77, 77);
+  color: white;
+  cursor: pointer;
+  font-family: Share Tech Mono, monospace;
+  font-size: 20px;
+}
+
+button:hover {
+  color: black;
+  outline: 0.05em solid grey;
+  z-index: 3;
 }
